--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="style.css">
 
-
+    <link rel="shortcut icon" href="./assets/favicon.png">
     <title>elit.</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="peliculas.html">Peliculas</a></li>
-              <li><a class="dropdown-item" href="#">Series</a></li>
+              <li><a class="dropdown-item" href="series.html">Series</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="https://github.com/nazanapoli" target="_blank">Hecho por Nazareno Napoli</a></li>
             </ul>
@@ -46,10 +46,10 @@
 
     <div class="film-ult">
         <img src="./assets/Fear-Street-1994.jpg">
-        <h3 class="title-film"><strong>Fear street: 1994</strong></h3>
-        <p class="p-bad">5.5 📽 </p>
+        <h3 class="title-film"><strong>Fear street: 1978</strong></h3>
+        <p class="p-reg">6 📽 </p>
         <p class="sinopsis">
-            <strong>Sinopsis:</strong> Un grupo de adolescentes descubre que los sucesos que acechan su ciudad desde hace generaciones podrían estar conectados. Además, pueden ser ellos los próximos en protagonizar la pesadilla.
+            <strong>Sinopsis:</strong> Camp Nightwing está dividido en habitantes de Shadyside y del pueblo de Sunnyvale. Cuando los horrores del pasado de ambos pueblos cogen fuerza, estos dos grupos deberán unirse para resolver un misterio terrorífico. 
         </p>
     </div>
 
@@ -67,9 +67,14 @@
 <div class="container-card">
 
         <div class="film">
+            <img src="./assets/La_calle_del_terror_Parte_2.jpg">
+            <h3 class="title-film"><strong>Fear street: 1978</strong></h3>
+            <p class="p-reg">6 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/Fear-Street-1994-s.jpg">
             <h3 class="title-film"><strong>Fear street: 1994</strong></h3>
-            <p class="p-bad">5.5 📽</p>
+            <p class="p-bad">5 📽</p>
         </div>
         <div class="film">
             <img src="./assets/Calibre.jpg">
@@ -91,11 +96,7 @@
             <h3 class="title-film"><strong>Jigsaw</strong></h3>
             <p class="p-reg">6 📽</p>
         </div>
-        <div class="film">
-            <img src="./assets/365-dni.jpg">
-            <h3 class="title-film"><strong>365</strong></h3>
-            <p class="p-bad">0 📽</p>
-        </div>
+
 
 </div>
 
