--- a/peliculas.html
+++ b/peliculas.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="peliculas.css">
 
+    <link rel="shortcut icon" href="./assets/favicon.png">
     <title>elit.</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
               <li><a class="dropdown-item" href="peliculas.html">Peliculas</a></li>
-              <li><a class="dropdown-item" href="#">Series</a></li>
+              <li><a class="dropdown-item" href="series.html">Series</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="https://github.com/nazanapoli" target="_blank">Hecho por Nazareno Napoli</a></li>
             </ul>
@@ -42,9 +43,14 @@
 <div class="container-card">
 
         <div class="film">
+            <img src="./assets/La_calle_del_terror_Parte_2.jpg">
+            <h3 class="title-film"><strong>Fear street: 1978</strong></h3>
+            <p class="p-reg">6 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/Fear-Street-1994-s.jpg">
             <h3 class="title-film"><strong>Fear Street: 1994</strong></h3>
-            <p class="p-bad">5.5 📽</p>
+            <p class="p-bad">5 📽</p>
         </div>
         <div class="film">
             <img src="./assets/El-orfanato.jpg">
