--- a/index.html
+++ b/index.html
@@ -108,31 +108,41 @@
     <h2 class="ultimas-reseñas">Top Reseñas</h2>
 </div>
 
-<div class="container-top-reseñas">
+<div class="top-3">
 
-<div class="film">
-    <img src="./assets/The-Snowman.jpg">
-    <h3 class="title-film"><strong>The Snowman</strong></h3>
-    <p class="p-good">8.5 📽 </p>
+<div class="card bg-dark text-white" id="card-puntuacion"> 
+    <img src="./assets/The-Snowman-large.jpg" class="card-img" alt="The Snowman">
+    <div class="card-img-overlay">
+      <h5 class="card-title"><strong>THE SNOWMAN</strong></h5>
+      <p class="card-text">
+        El detective estrella de la policía de Oslo sigue la pista de una serie de asesinatos en los cuales los cadáveres aparecen acompañados de un souvenir muy particular. </p>
+      <p class="p-good">8.5 📽</p>
+    </div>
+  </div>
+
+  <div class="card bg-dark text-white" id="card-puntuacion"> 
+    <img src="./assets/Inside-Out-large.jpg" class="card-img" alt="Intensamente">
+    <div class="card-img-overlay">
+      <h5 class="card-title"><strong>INTENSAMENTE</strong></h5>
+      <p class="card-text"> Intensamente es una cinta animada de Pixar que ofrece una mirada a lo más profundo de nuestras emociones.</p>
+      <p class="p-good">8 📽</p>
+    </div>
+  </div>
+
+  <div class="card bg-dark text-white" id="card-puntuacion"> 
+    <img src="./assets/It-large.jpg" class="card-img" alt="It">
+    <div class="card-img-overlay">
+      <h5 class="card-title"><strong>IT</strong></h5>
+      <p class="card-text">
+        Los niños de Derry están comenzando a desaparecer. Un grupo de amigos descubrirá y deberá enfrentar a la entidad que asedia su pueblo tomando la forma de un payaso.</p>
+      <p class="p-good">7 📽</p>
+    </div>
+  </div>
+
 </div>
-<div class="film">
-    <img src="./assets/Inside-Out.jpg">
-    <h3 class="title-film"><strong>Intensamente</strong></h3>
-    <p class="p-good">8 📽</p>
-</div>
-<div class="film">
-    <img src="./assets/Aterrados.jpg">
-    <h3 class="title-film"><strong>Aterrados</strong></h3>
-    <p class="p-good">7 📽</p>
-</div>
-
-</div>
 
 
-<br>
-<br>
-
-
+<!--                   FOOTER                 -->
 <footer>
     <div class="footer-div">
         <ul class="footer-contact">
