--- a/peliculas.html
+++ b/peliculas.html
@@ -58,9 +58,39 @@
             <p class="p-reg">6.5 📽</p>
         </div>
         <div class="film">
+            <img src="./assets/nadie-duerme-en-el-bosque-esta-noche.jpg">
+            <h3 class="title-film"><strong>W lesie dzis nie zasnie nikt</strong></h3>
+            <p class="p-bad">5 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/Kadaver.jpg">
+            <h3 class="title-film"><strong>El cádaver</strong></h3>
+            <p class="p-bad">4 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/The-Devil-All-the-Time.jpg">
+            <h3 class="title-film"><strong>El diablo a todas horas</strong></h3>
+            <p class="p-good">7 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/Little-Evil.jpg">
+            <h3 class="title-film"><strong>Little evil</strong></h3>
+            <p class="p-bad">5.5 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/Calibre.jpg">
             <h3 class="title-film"><strong>Calibre</strong></h3>
             <p class="p-reg">6 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/Extraction.jpg">
+            <h3 class="title-film"><strong>Extraction</strong></h3>
+            <p class="p-bad">5 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/time-trap.jpg">
+            <h3 class="title-film"><strong>Time trap</strong></h3>
+            <p class="p-bad">4 📽</p>
         </div>
         <div class="film">
             <img src="./assets/caso-watts.jpg">
@@ -68,9 +98,18 @@
             <p class="p-reg">6 📽</p>
         </div>
         <div class="film">
+            <img src="./assets/It.jpg">
+            <h3 class="title-film"><strong>IT</strong></h3>
+            <p class="p-good">7 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/The-Snowman.jpg">
             <h3 class="title-film"><strong>The Snowman</strong></h3>
             <p class="p-good">8.5 📽 </p>
+        </div>        <div class="film">
+            <img src="./assets/circulo.jpg">
+            <h3 class="title-film"><strong>Circulo</strong></h3>
+            <p class="p-bad">5 📽</p>
         </div>
         <div class="film">
             <img src="./assets/Jigsaw.jpg">
@@ -78,9 +117,19 @@
             <p class="p-reg">6 📽</p>
         </div>
         <div class="film">
+            <img src="./assets/El-Hoyo.jpg">
+            <h3 class="title-film"><strong>El hoyo</strong></h3>
+            <p class="p-reg">6.5 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/365-dni.jpg">
             <h3 class="title-film"><strong>365</strong></h3>
             <p class="p-bad">0 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/1922.jpg">
+            <h3 class="title-film"><strong>1922</strong></h3>
+            <p class="p-good">7 📽</p>
         </div>
         <div class="film">
             <img src="./assets/Inside-Out.jpg">
@@ -88,9 +137,19 @@
             <p class="p-good">8 📽</p>
         </div>
         <div class="film">
+            <img src="./assets/The-Silence.jpg">
+            <h3 class="title-film"><strong>El silencio</strong></h3>
+            <p class="p-bad">3 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/Aterrados.jpg">
             <h3 class="title-film"><strong>Aterrados</strong></h3>
             <p class="p-good">7 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/Hogar.jpg">
+            <h3 class="title-film"><strong>Hogar</strong></h3>
+            <p class="p-bad">3 📽</p>
         </div>
         <div class="film">
             <img src="./assets/Saw-III.jpg">
@@ -100,12 +159,17 @@
         <div class="film">
             <img src="./assets/Saw-II.jpg">
             <h3 class="title-film"><strong>Saw II</strong></h3>
-            <p class="p-good">7 📽</p>
+            <p class="p-reg">6 📽</p>
         </div>
         <div class="film">
             <img src="./assets/deliver_us_from_devil.jpg">
             <h3 class="title-film"><strong>Libranos del mal</strong></h3>
-            <p class="p-good">7 📽</p>
+            <p class="p-reg">6 📽</p>
+        </div>
+        <div class="film">
+            <img src="./assets/Mi-Obra-Maestra.jpg">
+            <h3 class="title-film"><strong>Mi obra maestra</strong></h3>
+            <p class="p-bad">5 📽</p>
         </div>
         <div class="film">
             <img src="./assets/Horse-Girl.jpg">
@@ -123,6 +187,11 @@
             <p class="p-bad">4 📽</p>
         </div>
         <div class="film">
+            <img src="./assets/Durante-la-tormenta.jpg">
+            <h3 class="title-film"><strong>Durante la tormenta</strong></h3>
+            <p class="p-bad">3 📽</p>
+        </div>
+        <div class="film">
             <img src="./assets/Insidious--Chapter-2.jpg">
             <h3 class="title-film"><strong>Insidious 2</strong></h3>
             <p class="p-bad">5 📽</p>
@@ -131,10 +200,7 @@
 </div>
 
 
-
-<br><br>
-
-
+<!--                   FOOTER                 -->
 <footer>
     <div class="footer-div">
         <ul class="footer-contact">
