--- a/series.html
+++ b/series.html
@@ -76,7 +76,7 @@
 
 </div>
 
-
+<!--                   FOOTER                 -->
 <footer>
     <div class="footer-div">
         <ul class="footer-contact">
