--- a/peliculas.html
+++ b/peliculas.html
@@ -18,7 +18,7 @@
 
     <header>
         <div class="div-header">
-            <a href="index.html"><img class="logo-header" src="./assets/logo1.png" alt="logo" width="60px" height="35px"></a>
+            <a class="nombre-pag" href="index.html"><strong>elit.</strong></a>
         <input class="buscador-header" type="search" placeholder="Buscar"  />
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,6 +42,11 @@
 
 <div class="container-card">
 
+        <div class="film">
+            <img src="./assets/Fear-street-1666.jpg">
+            <h3 class="title-film"><strong>Fear Street: 1666</strong></h3>
+            <p class="p-reg">6 📽</p>
+        </div>
         <div class="film">
             <img src="./assets/La_calle_del_terror_Parte_2.jpg">
             <h3 class="title-film"><strong>Fear street: 1978</strong></h3>
@@ -204,7 +209,7 @@
 <footer>
     <div class="footer-div">
         <ul class="footer-contact">
-            <a href="">CONTACTO</a>
+            <a href="contacto.html">CONTACTO</a>
             <a href="">SOBRE NOSOTROS</a>
             <a href="https://github.com/nazanapoli"><p>Hecho por Nazareno Napoli</p></a>
         </ul>
