--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#40394A">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="series.css">
-    
+    <link rel="stylesheet" href="contacto.css">
+
     <link rel="shortcut icon" href="./assets/favicon.png">
     <title>elit.</title>
 </head>
@@ -18,8 +19,8 @@
 
     <header>
         <div class="div-header">
-            <a class="nombre-pag" href="index.html"><strong>elit.</strong></a>
-        <input class="buscador-header" type="search" placeholder="Buscar"  />
+        <a class="nombre-pag" href="index.html"><strong>elit.</strong></a>
+        <input class="buscador-header" type="search" placeholder="Buscar" />
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
             <strong>Menú</strong>
@@ -30,62 +31,50 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="https://github.com/nazanapoli" target="_blank">Hecho por Nazareno Napoli</a></li>
             </ul>
-        </div>
+          </div>
     </div>
     </header>
 
 
 
-    <div class="div-h2">
-    <h2 class="ultimas-reseñas">Series</h2>
+
+<!--           H1 CONTACTO           -->
+<div class="wrap">
+    <div class="title-contacto">
+        <h1><strong>CONTACTO</strong></h1>
     </div>
-
-<div class="container-card">
-
-        <div class="serie">
-            <img src="./assets/ares.jpg">
-            <h3 class="title-film"><strong>Ares</strong></h3>
-            <p class="p-bad">4 📽</p>
-        </div>
-        <div class="serie">
-            <img src="./assets/Love-Death-Robots.jpg">
-            <h3 class="title-film"><strong>Love, death & robots</strong></h3>
-            <p class="p-reg">6 📽</p>
-        </div>
-        <div class="serie">
-            <img src="./assets/into-the-night.jpg">
-            <h3 class="title-film"><strong>Into the night</strong></h3>
-            <p class="p-good">6.5 📽</p>
-        </div>
-        <div class="serie">
-            <img src="./assets/Rick-and-Morty.jpg">
-            <h3 class="title-film"><strong>Rick & Morty</strong></h3>
-            <p class="p-good">7.5 📽</p>
-        </div>
-        <div class="serie">
-            <img src="./assets/desencanto.jpg">
-            <h3 class="title-film"><strong>(Des)encanto</strong></h3>
-            <p class="p-reg">6 📽</p>
-        </div>
-        <div class="serie">
-            <img src="./assets/Lost.jpg">
-            <h3 class="title-film"><strong>Lost</strong></h3>
-            <p class="p-good">8.5 📽</p>
-        </div>
-   
-
 </div>
+
+<!--           FORMULARIO           -->
+<form action="" class="form-contacto">
+    <header class="form-header">
+        <p>Si deseas comunicarte con nosotros, completa el formulario y serás contactado a la brevedad</p>
+    </header>
+
+    <label for="nombre">Nombre:</label>
+    <input type="text" name="nombre" id="nombre" required>
+
+    <label for="mail">Correo electrónico:</label required>
+    <input type="email" name="mail" id="mail">
+
+    <label for="mail">Mensaje:</label>
+    <textarea name="" id="text-area" cols="30" rows="10" required></textarea>
+
+    <button class="form-btn" type="submit"><strong>Enviar</strong></button>
+</form>
+
 
 <!--                   FOOTER                 -->
 <footer>
     <div class="footer-div">
         <ul class="footer-contact">
-            <a href="contacto.html">CONTACTO</a>
+            <a href="">CONTACTO</a>
             <a href="">SOBRE NOSOTROS</a>
-            <a href="https://github.com/nazanapoli"><p>Hecho por Nazareno Napoli</p></a>
+            <a href="https://github.com/nazanapoli" target="_blank"><p>Hecho por Nazareno Napoli</p></a>
         </ul>
     </div>
 </footer>
+
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
