--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#40394A">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -18,7 +19,7 @@
 
     <header>
         <div class="div-header">
-        <a href="index.html"><img class="logo-header" src="./assets/logo1.png" alt="logo" width="60px" height="35px"></a>
+          <a class="nombre-pag" href="index.html"><strong>elit.</strong></a>
         <input class="buscador-header" type="search" placeholder="Buscar" />
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -45,11 +46,11 @@
 <div class="container-ult-reseña">
 
     <div class="film-ult">
-        <img src="./assets/Fear-Street-1994.jpg">
-        <h3 class="title-film"><strong>Fear street: 1978</strong></h3>
+        <img src="./assets/Fear-street-1666-large.jpg">
+        <h3 class="title-film"><strong>Fear street: 1666</strong></h3>
         <p class="p-reg">6 📽 </p>
         <p class="sinopsis">
-            <strong>Sinopsis:</strong> Camp Nightwing está dividido en habitantes de Shadyside y del pueblo de Sunnyvale. Cuando los horrores del pasado de ambos pueblos cogen fuerza, estos dos grupos deberán unirse para resolver un misterio terrorífico. 
+            <strong>Sinopsis:</strong> En 1666, un pueblo colonial sufre una caza de brujas que tiene consecuencias letales durante siglos. Está en manos de los jóvenes de 1994 poner fin a esta maldición.
         </p>
     </div>
 
@@ -66,6 +67,11 @@
 
 <div class="container-card">
 
+        <div class="film">
+            <img src="./assets/Fear-street-1666.jpg">
+            <h3 class="title-film"><strong>Fear Street: 1666</strong></h3>
+            <p class="p-reg">6 📽</p>
+        </div>
         <div class="film">
             <img src="./assets/La_calle_del_terror_Parte_2.jpg">
             <h3 class="title-film"><strong>Fear street: 1978</strong></h3>
@@ -91,11 +97,7 @@
             <h3 class="title-film"><strong>The Snowman</strong></h3>
             <p class="p-good">8.5 📽 </p>
         </div>
-        <div class="film">
-            <img src="./assets/Jigsaw.jpg">
-            <h3 class="title-film"><strong>Jigsaw</strong></h3>
-            <p class="p-reg">6 📽</p>
-        </div>
+
 
 
 </div>
@@ -146,7 +148,7 @@
 <footer>
     <div class="footer-div">
         <ul class="footer-contact">
-            <a href="">CONTACTO</a>
+            <a href="contacto.html">CONTACTO</a>
             <a href="">SOBRE NOSOTROS</a>
             <a href="https://github.com/nazanapoli" target="_blank"><p>Hecho por Nazareno Napoli</p></a>
         </ul>
